--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,7 @@ main h2 {
   text-align: center;
   background-color: #000;
   color: #fff;
+  font-size: 28px;
   margin-top: 16px;
   padding: 12px;
 }
