--- a/css/players.css
+++ b/css/players.css
@@ -101,6 +101,7 @@ main li img {
 
 main li {
   border: 2px solid #0000001c;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 8px 16px;
 }
 
