alterações na cor do roda pe

--- a/css/players.css
+++ b/css/players.css
@@ -119,7 +119,7 @@ main li .city {
 /* FOOTER */
 
 footer {
-  background-color: #d2232a;
+  background-color: #000000;
   padding: 10px 0;
   color: #fff;
 }
