--- a/css/scheduled-games.css
+++ b/css/scheduled-games.css
@@ -101,7 +101,7 @@ table tbody td {
 /* FOOTER */
 
 footer {
-  background-color: #d2232a;
+  background-color: #000000;
   text-align: center;
   padding: 10px 0;
   color: #fff;
