--- a/css/index.css
+++ b/css/index.css
@@ -88,7 +88,7 @@ main .info-paragraphs p {
 /* FOOTER */
 
 footer {
-  background-color: #d2232a;
+  background-color: #000000;
   text-align: center;
   padding: 10px 0;
   color: #fff;
